syntax = "proto3";

option go_package = "github.com/omaqase/sato/user/pkg/api/v1/user;protobuf";

package api.v1.user;

import "google/protobuf/timestamp.proto";

// Sign Up

message SignUpRequest {
  string email = 1 [json_name = "email"];
  string password = 2 [json_name = "password"];
  string first_name = 3 [json_name = "first_name"];
  string last_name = 4 [json_name = "last_name"];
}

message SignUpResponse {
  string email = 1 [json_name = "email"];
  string first_name = 2 [json_name = "first_name"];
  string last_name = 3 [json_name = "last_name"];
  string created_at = 4 [json_name = "created_at"];
  string updated_at = 5 [json_name = "updated_at"];
}

// Sign In

message SignInRequest {
  string email = 1 [json_name = "email"];
}

message SignInResponse {

}

// Log out

message LogOutRequest {

}

message LogOutResponse {

}

// Refresh Token

message RefreshTokenRequest {

}

message RefreshTokenResponse {

}

// Update User

message UpdateUserRequest {

}

message UpdateUserResponse {

}

// Get subscribed to promotions users

message GetSubscribedToPromotionUsersRequest {
  int32 limit = 1 [json_name = "limit"];
  string cursor = 2 [json_name = "cursor"];
}

message GetSubscribedToPromotionUsersResponseItem {
    string email = 1 [json_name = "email"];
}

message GetSubscribedToPromotionUsersResponse {
  repeated GetSubscribedToPromotionUsersResponseItem emails = 1;
}